--- a/torchmenu/settings.yaml
+++ b/torchmenu/settings.yaml
@@ -2,5 +2,5 @@ inference_port: '8080'
 management_port: '8081'
 metrics_port: '8082'
 url: http://127.0.0.1
-model_store_path: ''
+store_path: ''
 config_path: ''
